# hello-rocket

./: Cargo.toml  Dockerfile  hello-rocket.yaml
assets/styles/: main.min.css
src/: main.rs
templates/: index.html.hbs
